--- a/Assignment-1/package.json
+++ b/Assignment-1/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0"
   }
